added a fourth price option

--- a/index.html
+++ b/index.html
@@ -137,13 +137,14 @@
         <div id="offersDiv">
             <button id="class35" class="color1" onclick="handleOffer(this)">$35</button>
             <button id="class65" class="color2" onclick="handleOffer(this)">$65</button>
-            <button id="class250" class="color3" onclick="handleOffer(this)">$250</button>
+            <button id="class300" class="color3" onclick="handleOffer(this)">$300</button>
+            <button id="class500" class="color4" onclick="handleOffer(this)">$500</button>
             <hr>
             <table>
                 <tr>
-                    <td>
+                    <th>
                         30 mins
-                    </td>
+                    </th>
                     <td>
                         <input type="radio" disabled class="class35" name="30mins">
                     </td>
@@ -153,11 +154,14 @@
                     <td>
                         <input type="radio" disabled name="30mins">
                     </td>
+                    <td>
+                        <input type="radio" disabled name="30mins">
+                    </td>
                 </tr>
                 <tr>
-                    <td>
+                    <th>
                         1 hour
-                    </td>
+                    </th>
                     <td>
                         <input type="radio" disabled name="60mins">
                     </td>
@@ -167,11 +171,14 @@
                     <td>
                         <input type="radio" disabled name="60mins">
                     </td>
+                    <td>
+                        <input type="radio" disabled name="60mins">
+                    </td>
                 </tr>
                 <tr>
-                    <td>
+                    <th>
                         5 hours
-                    </td>
+                    </th>
                     <td>
                         <input type="radio" disabled name="5hours">
                     </td>
@@ -179,31 +186,39 @@
                         <input type="radio" disabled name="5hours">
                     </td>
                     <td>
-                        <input type="radio" disabled class="class250" name="5hours">
+                        <input type="radio" disabled class="class300" name="5hours">
+                    </td>
+                    <td>
+                        <input type="radio" disabled name="5hours">
+                    </td>
+                    
+                </tr>
+                <tr>
+                    <th>
+                        10 hours
+                    </th>
+                    <td>
+                        <input type="radio" disabled name="10hours">
+                    </td>
+                    <td>
+                        <input type="radio" disabled name="10hours">
+                    </td>
+                    
+                    <td>
+                        <input type="radio" disabled name="10hours">
+                    </td>
+                    <td>
+                        <input type="radio" disabled class="class500" name="10hours">
                     </td>
                 </tr>
-                <!-- <tr>
-                <td>
-                    Several Days
-                </td>
-                <td>
-                    <input type="radio" disabled name="muliDays">
-                </td>
-                <td>
-                    <input type="radio" disabled name="muliDays">
-                </td>
-                <td>
-                    <input type="radio" disabled class="class250" name="muliDays">
-                </td>
-            </tr> -->
             </table>
             <hr>
             <table>
                 <tbody>
                     <tr>
-                        <td>
+                        <th>
                             Tutor
-                        </td>
+                        </th>
                         <td>
                             <input type="radio" disabled class="class35" name="tutor">
                         </td>
@@ -211,13 +226,16 @@
                             <input type="radio" disabled class="class65" name="tutor">
                         </td>
                         <td>
-                            <input type="radio" disabled class="class250" name="tutor">
+                            <input type="radio" disabled class="class300" name="tutor">
+                        </td>
+                        <td>
+                            <input type="radio" disabled class="class500" name="tutor">
                         </td>
                     </tr>
                     <tr>
-                        <td>
+                        <th>
                             Analyst
-                        </td>
+                        </th>
                         <td>
                             <input type="radio" disabled class="class35" name="analytics">
                         </td>
@@ -225,13 +243,16 @@
                             <input type="radio" disabled class="class65" name="analytics">
                         </td>
                         <td>
-                            <input type="radio" disabled class="class250" name="analytics">
+                            <input type="radio" disabled class="class300" name="analytics">
+                        </td>
+                        <td>
+                            <input type="radio" disabled class="class500" name="analytics">
                         </td>
                     </tr>
                     <tr>
-                        <td>
+                        <th>
                             Developer
-                        </td>
+                        </th>
                         <td>
                             <input type="radio" disabled class="class35" name="developer">
                         </td>
@@ -239,7 +260,10 @@
                             <input type="radio" disabled class="class65" name="developer">
                         </td>
                         <td>
-                            <input type="radio" disabled class="class250" name="developer">
+                            <input type="radio" disabled class="class300" name="developer">
+                        </td>
+                        <td>
+                            <input type="radio" disabled class="class500" name="developer">
                         </td>
                     </tr>
                 </tbody>
