--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <nav>
         <h1 id="co">Analytics And Web Development</h1>
         <svg id="logoSvg">
+            <g id="circles">
+                <ellipse fill="teal" rx="8%" ry="9%" cx="2%" cy="10%" />
+                <ellipse fill="black" rx="7.5%" ry="8.5%" cx="2.55%" cy="9%" />
+            </g>
+        </svg>
+        <svg id="ship">
             <defs>
                 <linearGradient id="Gradient2" x1="0" x2="0" y1="0" y2="1">
                     <stop offset="0%" stop-color="black" />
@@ -21,35 +27,31 @@
                     <stop offset="100%" stop-color="black" />
                 </linearGradient>
             </defs>
-            <g id="circles">
-                <ellipse fill="teal" rx="8%" ry="9%" cx="2%" cy="10%" />
-                <ellipse fill="black" rx="7.5%" ry="8.5%" cx="2.55%" cy="9%" />
-            </g>
-            <g id="ship" x="10%" y="40%">
-                <rect id="leftWing" fill="white" x="15%" y="6.5%" width="6%" height="3%" />
-                <rect id="leftWing" fill="url(#Gradient2)" x="15%" y="6.5%" width="6%" height="3%" />
-                <ellipse fill="white" rx="1.5%" ry="2.01%" cx="33%" cy="12%" />
-                <ellipse fill="url(#Gradient2)" rx="1.5%" ry="2.01%" cx="33%" cy="12%" />
-                <rect fill="white" x="15%" y="10%" width="17.98%" height="4%" />
-                <rect fill="url(#Gradient2)" x="15%" y="10%" width="18%" height="4%" />
-                <text x="15.5%" y="12.5%" fill="white">Analytics and Web Development</text>
-                <rect id="rightWing" fill="black" opacity=".3" x="14%" y="14.5%" width="10%" height="3.5%" />
-                <rect id="rightWing" fill="white" x="15%" y="14.5%" width="6%" height="3%" />
-                <rect id="rightWing" fill="url(#Gradient2)" x="15%" y="14.5%" width="6%" height="3%" />
-                <text x="15.5%" y="16.5%" fill="white">.com</text>
-            </g>
-            <g id="speed1">
-                <polyline fill="silver" stroke="white" points="100,62 200,40"></polyline>
-                <polyline fill="silver" stroke="white" points="200,105 300,85"></polyline>
-            </g>
-            <g id="speed2">
-                <polyline fill="silver" stroke="white" points="290,75 360,60"></polyline>
-                <polyline fill="silver" stroke="white" points="150,100 250,80"></polyline>
-            </g>
-            <g id="speed3">
-                <polyline fill="silver" stroke="white" points="250,25 320,10"></polyline>
-                <polyline fill="silver" stroke="white" points="50,130 130,115"></polyline>
-            </g>
+
+            <rect id="leftWing" fill="white" x="15%" y="6.5%" width="6%" height="3%" />
+            <rect id="leftWing" fill="url(#Gradient2)" x="15%" y="6.5%" width="6%" height="3%" />
+            <ellipse fill="white" rx="1.5%" ry="2.01%" cx="33%" cy="12%" />
+            <ellipse fill="url(#Gradient2)" rx="1.5%" ry="2.01%" cx="33%" cy="12%" />
+            <rect fill="white" x="15%" y="10%" width="17.98%" height="4%" />
+            <rect fill="url(#Gradient2)" x="15%" y="10%" width="18%" height="4%" />
+            <text x="15.5%" y="12.5%" fill="white">Analytics and Web Development</text>
+            <rect id="rightWing" fill="black" opacity=".3" x="14%" y="14.5%" width="10%" height="3.5%" />
+            <rect id="rightWing" fill="white" x="15%" y="14.5%" width="6%" height="3%" />
+            <rect id="rightWing" fill="url(#Gradient2)" x="15%" y="14.5%" width="6%" height="3%" />
+            <text x="15.5%" y="16.5%" fill="white">.com</text>
+        </svg>
+
+        <svg id="speed1">
+            <polyline fill="silver" stroke="silver" points="0,85 100,60"></polyline>
+            <polyline fill="silver" stroke="silver" points="125,80 175,70"></polyline>
+        </svg>
+        <svg id="speed2">
+            <!-- <polyline fill="silver" stroke="white" points="10,25 60,12"></polyline> -->
+            <polyline fill="silver" stroke="white" points="50,50 150,28"></polyline>
+        </svg>
+        <svg id="speed3">
+            <polyline fill="silver" stroke="white" points="0,80 80,62"></polyline>
+            <!-- <polyline fill="silver" stroke="white" points="100,20 170,5"></polyline> -->
         </svg>
         <img id="asteroid" src="./assets/images/asteroid.png" alt="" />
 
@@ -77,11 +79,10 @@
 
             <div id="switchBtn">
                 <button id="rewind">
-                    << 
-                </button>
-                <button id="forward">
-                    >>
-                </button>
+                    << </button>
+                        <button id="forward">
+                            >>
+                        </button>
             </div>
         </div>
 
@@ -96,109 +97,111 @@
             <button id="class1000" class="color5" onclick="handleOffer(this)">$1000</button>
             <hr>
             <table>
-                <tr>
-                    <th>
-                        30 mins
-                    </th>
-                    <td>
-                        <input type="radio" disabled class="class35" name="30mins">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="30mins">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="30mins">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="30mins">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="30mins">
-                    </td>
-                </tr>
-                <tr>
-                    <th>
-                        1 hour
-                    </th>
-                    <td>
-                        <input type="radio" disabled name="60mins">
-                    </td>
-                    <td>
-                        <input type="radio" disabled class="class65" name="60mins">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="60mins">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="60mins">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="60mins">
-                    </td>
-                </tr>
-                <tr>
-                    <th>
-                        5 hours
-                    </th>
-                    <td>
-                        <input type="radio" disabled name="5hours">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="5hours">
-                    </td>
-                    <td>
-                        <input type="radio" disabled class="class300" name="5hours">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="5hours">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="5hours">
-                    </td>
+                <tbody>
+                    <tr>
+                        <th>
+                            30 mins
+                        </th>
+                        <td>
+                            <input type="radio" disabled class="class35" name="30mins">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="30mins">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="30mins">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="30mins">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="30mins">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            1 hour
+                        </th>
+                        <td>
+                            <input type="radio" disabled name="60mins">
+                        </td>
+                        <td>
+                            <input type="radio" disabled class="class65" name="60mins">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="60mins">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="60mins">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="60mins">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            5 hours
+                        </th>
+                        <td>
+                            <input type="radio" disabled name="5hours">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="5hours">
+                        </td>
+                        <td>
+                            <input type="radio" disabled class="class300" name="5hours">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="5hours">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="5hours">
+                        </td>
 
-                </tr>
-                <tr>
-                    <th>
-                        10 hours
-                    </th>
-                    <td>
-                        <input type="radio" disabled name="10hours">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="10hours">
-                    </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            10 hours
+                        </th>
+                        <td>
+                            <input type="radio" disabled name="10hours">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="10hours">
+                        </td>
 
-                    <td>
-                        <input type="radio" disabled name="10hours">
-                    </td>
-                    <td>
-                        <input type="radio" disabled class="class550" name="10hours">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="10hours">
-                    </td>
-                </tr>
-                <tr>
-                    <th>
-                        20 hours
-                    </th>
-                    <td>
-                        <input type="radio" disabled name="20hours">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="20hours">
-                    </td>
+                        <td>
+                            <input type="radio" disabled name="10hours">
+                        </td>
+                        <td>
+                            <input type="radio" disabled class="class550" name="10hours">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="10hours">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            20 hours
+                        </th>
+                        <td>
+                            <input type="radio" disabled name="20hours">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="20hours">
+                        </td>
 
-                    <td>
-                        <input type="radio" disabled name="20hours">
-                    </td>
-                    <td>
-                        <input type="radio" disabled name="20hours">
-                    </td>
-                    <td>
-                        <input type="radio" disabled class="class1000" name="20hours">
-                    </td>
-                </tr>
+                        <td>
+                            <input type="radio" disabled name="20hours">
+                        </td>
+                        <td>
+                            <input type="radio" disabled name="20hours">
+                        </td>
+                        <td>
+                            <input type="radio" disabled class="class1000" name="20hours">
+                        </td>
+                    </tr>
+                </tbody>
             </table>
             <hr>
             <table>
@@ -286,7 +289,7 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <div class="calendly-inline-widget"
-            data-url="https://calendly.com/geronimo-perez/private-tutoring-session?background_color=007d7d&text_color=ffffff&primary_color=2AF801"
+                data-url="https://calendly.com/geronimo-perez/private-tutoring-session?background_color=007d7d&text_color=ffffff&primary_color=2AF801"
                 style="min-width:320px;height:800px;"></div>
         </div>
     </div>
@@ -295,7 +298,7 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <div class="calendly-inline-widget"
-            data-url="https://calendly.com/geronimo-perez/1-of-5-private-tutoring-sessions?background_color=0277bd&text_color=fffafa&primary_color=24CB03"
+                data-url="https://calendly.com/geronimo-perez/1-of-5-private-tutoring-sessions?background_color=0277bd&text_color=fffafa&primary_color=24CB03"
                 style="min-width:320px;height:800px;"></div>
         </div>
     </div>
@@ -304,7 +307,7 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <div class="calendly-inline-widget"
-            data-url="https://calendly.com/geronimo-perez/1-of-10-private-tutoring-sessions?background_color=dc5e00&text_color=ffffff"
+                data-url="https://calendly.com/geronimo-perez/1-of-10-private-tutoring-sessions?background_color=dc5e00&text_color=ffffff"
                 style="min-width:320px;height:800px;"></div>
         </div>
     </div>
@@ -313,7 +316,7 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <div class="calendly-inline-widget"
-            data-url="https://calendly.com/geronimo-perez/1-of-20-private-tutoring-sessions?background_color=7d2626&text_color=ffffff&primary_color=2997F5"
+                data-url="https://calendly.com/geronimo-perez/1-of-20-private-tutoring-sessions?background_color=7d2626&text_color=ffffff&primary_color=2997F5"
                 style="min-width:320px;height:800px;"></div>
         </div>
     </div>
