--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h1 id="co">Analytics And Web Development</h1>
         <svg id="logoSvg">
             <g id="circles">
-                <ellipse fill="teal" rx="8%" ry="9%" cx="2%" cy="10%" />
-                <ellipse fill="black" rx="7.5%" ry="8.5%" cx="2.55%" cy="9%" />
+                <ellipse fill="teal" rx="25%" ry="40%" cx="50%" cy="50%"></ellipse>
+                <ellipse fill="black" rx="23%" ry="38%" cx="52%" cy="46%"></ellipse>
             </g>
         </svg>
         <svg id="ship">
@@ -28,17 +28,17 @@
                 </linearGradient>
             </defs>
 
-            <rect id="leftWing" fill="white" x="15%" y="6.5%" width="6%" height="3%" />
-            <rect id="leftWing" fill="url(#Gradient2)" x="15%" y="6.5%" width="6%" height="3%" />
-            <ellipse fill="white" rx="1.5%" ry="2.01%" cx="33%" cy="12%" />
-            <ellipse fill="url(#Gradient2)" rx="1.5%" ry="2.01%" cx="33%" cy="12%" />
-            <rect fill="white" x="15%" y="10%" width="17.98%" height="4%" />
-            <rect fill="url(#Gradient2)" x="15%" y="10%" width="18%" height="4%" />
-            <text x="15.5%" y="12.5%" fill="white">Analytics and Web Development</text>
-            <rect id="rightWing" fill="black" opacity=".3" x="14%" y="14.5%" width="10%" height="3.5%" />
-            <rect id="rightWing" fill="white" x="15%" y="14.5%" width="6%" height="3%" />
-            <rect id="rightWing" fill="url(#Gradient2)" x="15%" y="14.5%" width="6%" height="3%" />
-            <text x="15.5%" y="16.5%" fill="white">.com</text>
+            <rect id="leftWing" fill="white" x="-1.5%" y="28%" width="20%" height="12%" />
+            <rect id="leftWing" fill="url(#Gradient2)" x="-1.5%" y="28%" width="20%" height="12%" />
+            <ellipse fill="white" rx="6%" ry="8%" cx="70%" cy="48%" />
+            <ellipse fill="url(#Gradient2)" rx="6%" ry="8%" cx="70%" cy="48%" />
+            <rect fill="white" x="15%" y="40%" width="55%" height="16%" />
+            <rect fill="url(#Gradient2)" x="15%" y="40%" width="55%" height="16%" />
+            <text x="17%" y="50%" fill="white">Analytics and Web Development</text>
+            <rect id="rightWing" fill="black" opacity=".3" x="35%" y="60%" width="20%" height="14%" />
+            <rect id="rightWing" fill="white" x="37.1%" y="56%" width="20%" height="14%" />
+            <rect id="rightWing" fill="url(#Gradient2)" x="37.1%" y="56%" width="20%" height="14%" />
+            <text x="19%" y="65%" fill="white">.com</text>
         </svg>
 
         <svg id="speed1">
@@ -329,6 +329,44 @@
     <script src="./assets/js/speech.js"></script>
     <script src="./assets/js/app.js"></script>
 
+    <!-- Code injected by live-server -->
+    <script>
+        // <![CDATA[  <-- For SVG support
+        if ('WebSocket' in window) {
+            (function () {
+                function refreshCSS() {
+                    var sheets = [].slice.call(document.getElementsByTagName("link"));
+                    var head = document.getElementsByTagName("head")[0];
+                    for (var i = 0; i < sheets.length; ++i) {
+                        var elem = sheets[i];
+                        var parent = elem.parentElement || head;
+                        parent.removeChild(elem);
+                        var rel = elem.rel;
+                        if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+                            var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+                            elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+                        }
+                        parent.appendChild(elem);
+                    }
+                }
+                var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+                var address = protocol + window.location.host + window.location.pathname + '/ws';
+                var socket = new WebSocket(address);
+                socket.onmessage = function (msg) {
+                    if (msg.data == 'reload') window.location.reload();
+                    else if (msg.data == 'refreshcss') refreshCSS();
+                };
+                if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+                    console.log('Live reload enabled.');
+                    sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+                }
+            })();
+        }
+        else {
+            console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+        }
+	// ]]>
+    </script>
 </body>
 
 </html>
