improved modal interaction

--- a/index.html
+++ b/index.html
@@ -276,50 +276,42 @@
         </div>
     </main>
 
-    <div id="myModal1" class="modal myModal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
+    <dialog id="myModal1" class="modal-content">
+        <span onclick="myModal1.close()" class="close">&times;</span>
             <div class="calendly-inline-widget"
                 data-url="https://calendly.com/geronimo-perez/30-mins-private-tutoring-session?background_color=1a1a1a&text_color=ffffff"
                 style="min-width:320px;height:800px;"></div>
-        </div>
-    </div>
+    </dialog>
 
-    <div id="myModal2" class="modal myModal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <div class="calendly-inline-widget"
-                data-url="https://calendly.com/geronimo-perez/private-tutoring-session?background_color=007d7d&text_color=ffffff&primary_color=2AF801"
-                style="min-width:320px;height:800px;"></div>
-        </div>
-    </div>
+    <dialog id="myModal2" class="modal-content">
+        <span onclick="myModal2.close()" class="close">&times;</span>
+            <div>
+                <div class="calendly-inline-widget"
+                    data-url="https://calendly.com/geronimo-perez/private-tutoring-session?background_color=007d7d&text_color=ffffff&primary_color=2AF801"
+                    style="min-width:320px;height:800px;"></div>
+            </div>
+    </dialog>
 
-    <div id="myModal3" class="modal myModal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
+    <dialog id="myModal3" class="modal-content">
+        <span onclick="myModal3.close()" class="close">&times;</span>
             <div class="calendly-inline-widget"
-                data-url="https://calendly.com/geronimo-perez/1-of-5-private-tutoring-sessions?background_color=0277bd&text_color=fffafa&primary_color=24CB03"
-                style="min-width:320px;height:800px;"></div>
-        </div>
-    </div>
+            data-url="https://calendly.com/geronimo-perez/1-of-5-private-tutoring-sessions?background_color=0277bd&text_color=fffafa&primary_color=24CB03"
+            style="min-width:320px;height:800px;"></div>
+    </dialog>
 
-    <div id="myModal4" class="modal myModal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
+    <dialog id="myModal4" class="modal-content">
+        <span onclick="myModal4.close()" class="close">&times;</span>
             <div class="calendly-inline-widget"
-                data-url="https://calendly.com/geronimo-perez/1-of-10-private-tutoring-sessions?background_color=dc5e00&text_color=ffffff"
-                style="min-width:320px;height:800px;"></div>
-        </div>
-    </div>
+            data-url="https://calendly.com/geronimo-perez/1-of-10-private-tutoring-sessions?background_color=dc5e00&text_color=ffffff"
+            style="min-width:320px;height:800px;"></div>
+    </dialog>
 
-    <div id="myModal5" class="modal myModal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
+    <dialog id="myModal5" class="modal-content">
+        <span onclick="myModal5.close()" class="close">&times;</span>
             <div class="calendly-inline-widget"
-                data-url="https://calendly.com/geronimo-perez/1-of-20-private-tutoring-sessions?background_color=7d2626&text_color=ffffff&primary_color=2997F5"
-                style="min-width:320px;height:800px;"></div>
-        </div>
-    </div>
+            data-url="https://calendly.com/geronimo-perez/1-of-20-private-tutoring-sessions?background_color=7d2626&text_color=ffffff&primary_color=2997F5"
+            style="min-width:320px;height:800px;"></div>
+    </dialog>
 
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
