--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <img id="asteroid" src="./assets/images/asteroid.png" alt="" />
 
         <div id="links">
-            <button id="syllabusBtn">Syllabus</button>
+            <button onclick="showSyllabus()">Syllabus</button>
             <a target="_blank" href="https://g.page/r/CeWB47Bolh99EAI/review">Reviews Us On Google</a>
             <a target="_blank" href="https://linkedin.com/in/geronimoperez">Find Us On LinkedIn</a>
             <a href="mailto:concerns@analyticsandwebdevelopment.com" id="emailUs">Email Us</a>
