working on favicon

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Analytics And Web Development</title>
+    <title>Analysis And Development</title>
 </head>
 
 <body>
     <nav>
-        <h1 id="co">Analytics And Web Development</h1>
+        <h1 id="co">Analysis And Development</h1>
         <svg id="logoSvg">
             <g id="circles">
                 <ellipse fill="teal" rx="25%" ry="40%" cx="50%" cy="50%"></ellipse>
@@ -34,7 +34,7 @@
             <ellipse fill="url(#Gradient2)" rx="6%" ry="8%" cx="70%" cy="48%" />
             <rect fill="white" x="15%" y="40%" width="55%" height="16%" />
             <rect fill="url(#Gradient2)" x="15%" y="40%" width="55%" height="16%" />
-            <text x="17%" y="50%" fill="white">Analytics and Web Development</text>
+            <text x="17%" y="50%" fill="white">Analysis And Development</text>
             <rect id="rightWing" fill="black" opacity=".3" x="35%" y="60%" width="20%" height="14%" />
             <rect id="rightWing" fill="white" x="37.1%" y="56%" width="20%" height="14%" />
             <rect id="rightWing" fill="url(#Gradient2)" x="37.1%" y="56%" width="20%" height="14%" />
