--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+    <div id="freeSessionDiv">
+        <span id="freeSession"> Click for a free session thanks to Jason!!!</span>
+        <span id="closeFree">&#x2718;</span>
+    </div>
     <nav>
         <h1 id="co">Analysis And Development</h1>
         <svg id="logoSvg">
@@ -279,38 +283,45 @@
 
     <dialog id="myModal1" class="modal-content">
         <span onclick="myModal1.close()" class="close">&times;</span>
-            <div class="calendly-inline-widget"
-                data-url="https://calendly.com/geronimo-perez/30-mins-private-tutoring-session?background_color=1a1a1a&text_color=ffffff"
-                style="min-width:320px;height:700px;"></div>
+        <div class="calendly-inline-widget"
+            data-url="https://calendly.com/geronimo-perez/30-mins-private-tutoring-session?background_color=1a1a1a&text_color=ffffff"
+            style="min-width:320px;height:700px;"></div>
     </dialog>
 
     <dialog id="myModal2" class="modal-content">
         <span onclick="myModal2.close()" class="close">&times;</span>
-            <div>
-                <div class="calendly-inline-widget"
-                    data-url="https://calendly.com/geronimo-perez/private-tutoring-session?background_color=007d7d&text_color=ffffff&primary_color=2AF801"
-                    style="min-width:320px;height:700px;"></div>
-            </div>
+        <div>
+            <div class="calendly-inline-widget"
+                data-url="https://calendly.com/geronimo-perez/private-tutoring-session?background_color=007d7d&text_color=ffffff&primary_color=2AF801"
+                style="min-width:320px;height:700px;"></div>
+        </div>
     </dialog>
 
     <dialog id="myModal3" class="modal-content">
         <span onclick="myModal3.close()" class="close">&times;</span>
-            <div class="calendly-inline-widget"
+        <div class="calendly-inline-widget"
             data-url="https://calendly.com/geronimo-perez/1-of-5-private-tutoring-sessions?background_color=0277bd&text_color=fffafa&primary_color=24CB03"
             style="min-width:320px;height:700px;"></div>
     </dialog>
 
     <dialog id="myModal4" class="modal-content">
         <span onclick="myModal4.close()" class="close">&times;</span>
-            <div class="calendly-inline-widget"
+        <div class="calendly-inline-widget"
             data-url="https://calendly.com/geronimo-perez/1-of-10-private-tutoring-sessions?background_color=dc5e00&text_color=ffffff"
             style="min-width:320px;height:700px;"></div>
     </dialog>
 
     <dialog id="myModal5" class="modal-content">
         <span onclick="myModal5.close()" class="close">&times;</span>
-            <div class="calendly-inline-widget"
+        <div class="calendly-inline-widget"
             data-url="https://calendly.com/geronimo-perez/1-of-20-private-tutoring-sessions?background_color=7d2626&text_color=ffffff&primary_color=2997F5"
+            style="min-width:320px;height:700px;"></div>
+    </dialog>
+
+    <dialog id="myModal6" class="modal-content">
+        <span onclick="myModal6.close()" class="close">&times;</span>
+        <div class="calendly-inline-widget"
+            data-url="https://calendly.com/geronimo-perez/private-tutoring-session-clone?background_color=021032&text_color=ffffff"
             style="min-width:320px;height:700px;"></div>
     </dialog>
 
@@ -358,7 +369,7 @@
         else {
             console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
         }
-	// ]]>
+        // ]]>
     </script>
 </body>
 
