--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         <img id="asteroid" src="./assets/images/asteroid.png" alt="" />
 
         <div id="links">
-            <button onclick="showSyllabus()">Syllabus</button>
+            <button id="showApps" onclick="showThis(this.id)">Helpful Apps</button>
+            <button id="showSyllabus" onclick="showThis(this.id)">Syllabus</button>
             <a target="_blank" href="https://g.page/r/CeWB47Bolh99EAI/review">Reviews Us On Google</a>
             <a target="_blank" href="https://linkedin.com/in/geronimoperez">Find Us On LinkedIn</a>
             <a href="mailto:concerns@analyticsandwebdevelopment.com" id="emailUs">Email Us</a>
